tests/paczka1/small_fuzzy/10447339.err
Error in line 4: h17FNI S710 26,90
Error in line 3: h17FNI S710 46,4
Error in line 10: ON3xlvs2n A577 18,8
